<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DOTBIT EX</string>
    <string name="title">DOTBIT国际交易所</string>
    <string name="bannertitle">股权众筹计划</string>
    <string name="totalGSC">总DOTC</string>
    <string name="usableGSc">可提DOTC</string>
    <string name="realtimeprice">实时价格</string>
    <string name="shareholdernumber">股东编号</string>
    <string name="login">登录</string>
    <string name="login_hint_pwd">密码</string>
    <string name="regist">注册</string>
    <string name="regist_yaoqingma">邀请码:</string>
    <string name="please_input_yaoqingma">请输入邀请码</string>
    <string name="regist_phone">手机号:</string>
    <string name="regist_phone_hint">请输入您的手机号作为登录名</string>
    <string name="regist_next_step">下一步</string>
    <string name="fast_regist_phone">手机快速注册</string>
    <string name="please_input_ver_num">请输入验证码</string>
    <string name="get_ver_num">验证码</string>
    <string name="please_set_pwd_hint">请设置登录密码</string>
    <string name="set_pwd_hint">请输入6～20位字符</string>
    <string name="show_pwd_hint">密码可见</string>
    <string name="set_pwd_create_hint">密码由6-20位字母、数字或符号组成，不能是10位一下 纯数字、字母，字母区分大小写。</string>
    <string name="set_pwd_btn_complete">完成</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="reset_account">账号:</string>
    <string name="reset_phonenum">请输入手机号</string>
    <string name="reset_ver_num">验证码:</string>
    <string name="reset_ver_hint">请输入验证码</string>
    <string name="reset_get_ver">获取验证码</string>
    <string name="reset_newpwd_hint">请设置登录密码</string>
    <string name="reset_confirm_new_pwd">确定登录密码</string>
    <string name="reset_set_pwd_hint">设置新密码:</string>
    <string name="reset_confirm_pwd_hint">确认新密码:</string>
    <string name="reset_confirm">确定</string>
    <string name="confirm_account_hint">请输入手机号</string>
    <string name="confirm_bank_num_hint">银行卡:</string>
    <string name="confirm_input_bank_num_hint">请输入您的银行卡号</string>
    <string name="gscnumhint">请输入提币数量</string>
    <string name="gscnum">数量：</string>
    <string name="gscaddress">地址：</string>
    <string name="men_btn">立即提币</string>
    <string name="menmoney_title">提币</string>
    <string name="atonce_register">立即注册</string>
    <string name="forgetpwd">忘记密码?</string>
    <string name="exit">切换账号</string>
    <string name="rate">释放速率</string>
    <string name="person_header">头像</string>
    <string name="persion_account">账号</string>
    <string name="person_nick">姓名</string>
    <string name="person_card_id">身份证</string>
    <string name="person_sax">性别</string>
    <string name="person_brithday">出生日期</string>
    <string name="persion_info">个人信息</string>
    <string name="changeloginpwd">修改登录密码</string>
    <string name="sett">设置</string>
    <string name="new_pwd">新密码</string>
    <string name="cofirm_pwd">确认密码</string>
    <string name="changepaypwd">修改交易密码</string>
    <string name="add_bank_hint">添加银行卡</string>
    <string name="add_bank_card_num_hint">银行卡号：</string>
    <string name="add_bank_card_phone_hint">开户行：</string>
    <string name="add_bank_card_name_hint">开户行：</string>
    <string name="bankmanage">银行卡管理</string>
    <string name="confirm">确定</string>
    <string name="close">取消</string>
    <string name="deleteBank">删除银行卡</string>
    <string name="deleteBankHint">.您确定要删除该银行卡吗?</string>
    <string name="setdefault">设置为默认</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="name">姓名:</string>
    <string name="inputname">请输入您的姓名</string>
    <string name="idcard">身份证号</string>
    <string name="inputidcart">请输入您的身份证号</string>
    <string name="immauth">立即认证</string>
    <string name="realname">实名认证</string>
    <string name="realnamemenu">实名认证</string>
    <string name="incomemenu">收益记录</string>
    <string name="bankmanagemenu">银行卡管理</string>
    <string name="settmenu">设置</string>
    <string name="exitmenu">退出登录</string>
    <string name="recommmenu">推荐</string>
    <string name="recom">推荐</string>
    <string name="gscaddressmen">请输入提币地址</string>
    <string name="forgetpaypwd">忘记交易密码?</string>
    <string name="paypwdwindowhint">输入交易密码</string>
    <string name="yejijiang">业绩奖励</string>
    <string name="bankcard">银行卡</string>
    <string name="place_add_bank">请添加银行卡</string>
    <string name="tixiannum">提现金额：</string>
    <string name="place_input_num">请输入提现金额</string>
    <string name="allearnings">总收益:</string>
    <string name="alltixian">全部提现</string>
    <string name="immtixian">立即提现</string>
    <string name="acctime">预计72小时之内到账</string>
    <string name="shouyiytixian">收益提现</string>
    <string name="setPaypwd">设置交易密码</string>
</resources>