<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.WipDepActivity">
    <include
        layout="@layout/toobal_title"
        />
    <LinearLayout
        android:id="@+id/ll_seletebankcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/normal_10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankcard"
            android:textColor="@color/black_text"
            />
        <TextView
            android:id="@+id/tv_bankname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_10dp"
            android:hint="@string/place_add_bank"
            />
        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@mipmap/icon_right"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_0.5dp"
        android:background="@color/havling"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tixiannum"
            android:textColor="@color/black_text"
            />
        <EditText
            android:id="@+id/et_num"
            android:layout_width="match_parent"
            android:inputType="number"
            android:textSize="13sp"
            android:padding="@dimen/normal_10dp"
            android:hint="@string/place_input_num"
            android:layout_height="@dimen/normal_40dp"
            android:background="@drawable/shape_edit_bg"
            />

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allearnings"
                />
            <TextView
                android:id="@+id/tv_totalnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginLeft="@dimen/normal_10dp"
                android:textColor="@color/red"
                />
                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alltixian"
                    android:textColor="@color/blueviolet"
                    android:layout_marginLeft="@dimen/dp_20"
                    />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_40dp"
            android:background="@drawable/shape_ntn_bg"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/immtixian"
            android:textColor="@color/white"
            android:id="@+id/btn_submit"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acctime"
            android:layout_gravity="center_horizontal"
            />
</LinearLayout>