<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MenMoneyActivity">
    <include
        layout="@layout/toobal_title"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/normal_10dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gscnum"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/et_num"
            android:layout_width="wrap_content"
            android:layout_weight="6"
            android:inputType="number"
            android:lines="1"
            android:layout_height="@dimen/normal_30dp"
            android:hint="@string/gscnumhint"
            android:padding="3dp"
            android:textSize="@dimen/normal_txt_14sp"
            android:background="@drawable/shape_edit_bg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/normal_10dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gscaddress"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/et_address"
            android:layout_width="wrap_content"
            android:layout_weight="6"
            android:lines="1"
            android:layout_height="@dimen/normal_30dp"
            android:hint="@string/gscaddressmen"
            android:padding="3dp"
            android:textSize="@dimen/normal_txt_14sp"
            android:background="@drawable/shape_edit_bg"
            />
    </LinearLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/men_btn"
            android:textColor="@color/white"
            android:background="@drawable/shape_ntn_bg"
            />
</LinearLayout>