<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetPwdActivity">
    <include
        layout="@layout/toobal_title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_h_16dp"
        android:layout_marginRight="@dimen/normal_h_16dp"
        android:layout_marginTop="@dimen/normal_20dp"
        android:text="@string/please_set_pwd_hint"
        android:textColor="@color/black_000"
        android:textSize="@dimen/normal_txt_14sp" />

    <EditText
        android:id="@+id/set_pwd_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_40dp"
        android:layout_marginLeft="@dimen/normal_h_16dp"
        android:layout_marginRight="@dimen/normal_h_16dp"
        android:layout_marginTop="@dimen/normal_12dp"
        android:cursorVisible="true"
        android:theme="@style/edittext_gray_black_normal"
        android:hint="@string/set_pwd_hint"
        android:inputType="textPassword"
        android:textColor="@color/black_000"
        android:textSize="@dimen/normal_txt_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_h_16dp"
        android:layout_marginTop="@dimen/normal_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/set_pwd_showpwd"
            android:layout_width="@dimen/dp_20"
            android:button="@null"
            android:background="@drawable/selete_check"
            android:layout_height="@dimen/normal_20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_4dp"
            android:text="@string/show_pwd_hint"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/normal_txt_14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_h_16dp"
        android:layout_marginRight="@dimen/normal_h_16dp"
        android:text="@string/set_pwd_create_hint"
        android:textColor="@color/color_999999"
        android:layout_marginTop="@dimen/normal_10dp"
        android:textSize="@dimen/normal_txt_14sp" />

    <Button
        android:id="@+id/set_pwd_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_40dp"
        android:background="@drawable/login_btn_bg"
        android:layout_marginLeft="@dimen/normal_h_16dp"
        android:layout_marginRight="@dimen/normal_h_16dp"
        android:layout_marginTop="@dimen/normal_40dp"
        android:text="@string/set_pwd_btn_complete"
        android:textColor="@color/white_fff"
        android:textSize="@dimen/normal_txt_18sp" />

</LinearLayout>