<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RealNameActivity">
        <include
            layout="@layout/toobal_title"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_text"
            />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="40dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:lines="1"
                android:id="@+id/et_name"
                android:hint="@string/inputname"
                android:textSize="13sp"
                android:layout_marginLeft="@dimen/normal_10dp"
                />
            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_name"
                android:layout_centerVertical="true"
                android:textSize="13sp"
                android:layout_marginLeft="@dimen/normal_10dp"
                android:textColor="@color/black_text"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/idcard"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_text"
            />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="40dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/et_idcart"
                android:lines="1"
                android:hint="@string/inputidcart"
                android:textSize="13sp"
                android:layout_marginLeft="@dimen/normal_10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_idcart"
                android:textSize="13sp"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/normal_10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black_text"
                />
        </RelativeLayout>
    </LinearLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:text="@string/immauth"
            android:textColor="@color/white"
            android:layout_height="@dimen/normal_40dp"
            android:layout_margin="@dimen/dp_20"
            android:background="@drawable/shape_ntn_bg"
            />
</LinearLayout>